ml.xsp infinite loop
- start the HTTP interface,
- open the HTTP interface from the browser (what else can you do with the HTTP interface???),
- click the Eject button if needed,
- the playlist is now visible (wow!),
- click ml.xsp below Media Library.
Somehow ml.xsp keeps adding itself as its own child playlist item ad vitam eternam.