playlist: fix media library loading, fix #1320.